Fixed the `InaccessibleObjectException` thrown while running the integration tests from terminal.